--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -208,7 +208,7 @@
                         <li role="presentation" class="dropdown">
                             <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown"
                                aria-expanded="false">
-                                <i class="fa fa-envelope-o"></i>
+                                <i class="fa fa-key"></i>
                                 <span class="badge bg-green">{{current_user.MaCapQuanTri}}</span>
                             </a>
                         </li>
